# public_taka_the_bot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.example.yaml  docker-compose.yaml
scripts/: build.sh  build_wsl.bat  build_wsl.sh  init_db.sh  init_db_wsl.bat  init_db_wsl.sh  run.sh  run_wsl.bat  run_wsl.sh
taka_the_discord_bot_database/: postgres_database_dump.sql
taka_the_discord_bot_status/: Cargo.toml  Dockerfile
taka_the_discord_bot_status/assets/: index.css  index.html  index.js  status.js
taka_the_discord_bot_status/src/: main.rs
