[package]
name = "taka_the_discord_bot_status"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taka_the_discord_bot_status"
path = "src/main.rs"


[dependencies]
tokio = {version = "1.28.0", features = ["full"]}
tower-http = { version = "0.4.0", features = ["fs", "cors"] }
axum = "0.6.18"
reqwest = "0.11.18"
itertools = "0.10.5"
